@@ -697,8 +697,8 @@ void handledatabaseerror(DSTATE *s)
 			printe(PT_Error);
 		} else {
 			s->dbretrycount++;
-			if (s->dbretrycount >= DBRETRYLIMIT) {
-				snprintf(errorstring, 1024, "Database error retry limit %d reached, exiting.", DBRETRYLIMIT);
+			if (s->dbretrycount > DBRETRYLIMIT) {
+				snprintf(errorstring, 1024, "Database error retry limit of %d reached, exiting.", DBRETRYLIMIT);
 				printe(PT_Error);
 				errorexitdaemon(s, 1);
 			}
