@@ -1,6 +1,10 @@
 2.4 / <not released yet>
 
  - Fixed
+   - Daemon didn't correctly wait when acquiring database lock for data write
+     which could result in unnecessary errors and even process exit if an
+     external database read operation had exactly the same timing as the
+     daemon write operation
    - Daemon didn't fork() even when requested to with --daemon when started
      by PID 1 (issue seen at least in Docker containers)
    - Move vnstatd man page from section 1 to section 8
